[package]
name = "serde_asn1_der"
version = "0.1.0"
edition = "2018"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = ["serde", "asn1", "asn1-der", "serialize", "deserialize"]
categories = ["encoding"]
description = "An ASN.1-DER subset for serde"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/serde_asn1_der"
readme = "README.md"

[badges]
travis-ci = { repository = "KizzyCode/serde_asn1_der" }
appveyor = { repository = "KizzyCode/serde_asn1_der" }


[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
num-bigint-dig = { version = "0.5", default-features = false, optional = true }
oid = { git = "https://github.com/bcortier-devolutions/oid", branch = "serde_support", default-features = false, features = ["serde_support"], optional = true }

[dev-dependencies]
serde_bytes = "0.10"
base64 = "0.10"

[features]
complex_types = ["oid", "num-bigint-dig"]

[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true