[package]
name = "serde_asn1_der"
version = "0.8.0"
edition = "2018"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = ["serde", "asn1", "asn1-der", "no_panic"]
categories = ["encoding"]
description = "A basic ASN.1-DER implementation for `serde` based upon `asn1_der`"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/serde_asn1_der-rust"
readme = "README.md"


[badges]
travis-ci = { repository = "KizzyCode/serde_asn1_der-rust" }
appveyor = { repository = "KizzyCode/serde_asn1_der-rust" }


[features]
default = []
any = ["erased-serde"]


[dependencies]
serde = "1.0"
asn1_der = "0.7"
erased-serde = { version = "0.3", optional = true }


[dev-dependencies]
serde_derive = "1.0"
serde_bytes = "0.11"
serde_json = "1.0"


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true